<resources>
    <string name="app_name">Medic Meditation App</string>
    <string name="splash_screen">splash screen</string>
    <string name="img_logo_description">Essa imagem é do logo</string>
    <string name="string_img_logo_description">imagem logo</string>
    <string name="essa_imagem_do_welcome">Essa imagem é do welcome</string>
    <string name="essa_imagem_do_bot_o">Essa imagem é do botão</string>
    <string name="string_essa_imagem_do_bot_o">img_button</string>
    <string name="essa_imagem_do_sign_up">Essa imagem é do sign up</string>
    <string name="string_essa_imagem_do_sign_up">img_signup</string>
    <string name="essa_imagem_do_login">Essa imagem é do login</string>
    <string name="essa_imagem_do_sign_in">Essa imagem é do sign in</string>
    <string name="string_essa_imagem_do_sign_in">img_signin</string>
    <string name="todo">TODO</string>
    <string name="esse_icone_do_sign_up">Esse icone é do sign up</string>
    <string name="string_esse_icone_do_sign_up">ic_signup</string>
    <string name="essa_imagem_um_logo">Essa imagem é um logo</string>
    <string name="esse_cone_do_logo">Esse ícone é do logo</string>
    <string name="string_esse_cone_do_logo">ic_logo</string>
    <string name="esse_cone_do_title">Esse ícone é do title</string>
    <string name="string_esse_cone_do_title">ic_title</string>
    <string name="esse_icone_do_email">Esse icone é do email</string>
    <string name="string_esse_icone_do_email">ic_email</string>
    <string name="esse_cone_do_password">Esse ícone é do password</string>
    <string name="string_esse_cone_do_password">ic_password</string>
    <string name="essa_cone_do_sign_up">Essa ícone é do sign up</string>
    <string name="string_essa_cone_do_sign_up">ic_signup</string>
    <string name="esse_cone_do_account">Esse ícone é do account</string>
    <string name="string_esse_cone_do_account">ic_account</string>
    <string name="esse_cone_do_fundo">Esse ícone é do fundo</string>
    <string name="string_esse_cone_do_fundo">ic_fundo</string>
    <string name="esse_cone_do_header">Esse ícone é do header</string>
    <string name="esse_cone_do_main_title">Esse ícone é do main title</string>
    <string name="esse_cone_do_subtitle">Esse ícone é do subtitle</string>
    <string name="esse_icone_do_feelings">Esse icone é do feelings</string>
    <string name="esse_cone_da_meditation">Esse ícone é da meditation</string>
    <string name="esse_cone_do_hamburguer">Esse ícone é do hamburguer</string>
    <string name="esse_cone_logo_dois">Esse ícone é logo dois</string>
    <string name="essa_imagem_do_ellipse">Essa imagem é do ellipse</string>
    <string name="essa_imagem_da_medita_o">Essa imagem é da meditação</string>
    <string name="esse_cone_do_cardio_meditation">Esse ícone é do cardio meditation</string>
    <string name="essa_imagem_da_cardio_meditation">Essa imagem é da cardio meditation</string>
    <string name="esse_cone_profile">Esse ícone é profile</string>
    <string name="essa_icone_o_sounds">Essa icone é o sounds</string>
    <string name="esse_cone_um_home_um">Esse ícone é um home um</string>
    <string name="esse_icone_um_home_um">Esse icone é um home um</string>
    <string name="string_esse_icone_um_home_um">ic_homeum</string>
    <string name="esse_cone_do_hamburguer_dois">Esse ícone é do hamburguer dois</string>
    <string name="string_esse_cone_do_hamburguer_dois">ic_hamburguerdois</string>
    <string name="esse_cone_do_logo_tres">Esse ícone é do logo tres</string>
    <string name="string_esse_cone_do_logo_tres">ic_logotres</string>
    <string name="esse_cone_do_ellipse_dois">Esse ícone é do ellipse dois</string>
    <string name="string_esse_cone_do_ellipse_dois">ic_ellipsedois</string>
    <string name="essa_imagem_album_art">Essa imagem é album art</string>
    <string name="string_essa_imagem_album_art">img_albumart</string>
    <string name="esse_cone_title_dois">Esse ícone é title dois</string>
    <string name="string_esse_cone_title_dois">ic_titledois</string>
    <string name="esse_cone_arist">Esse ícone é arist</string>
    <string name="string_esse_cone_arist">ic_arist</string>
    <string name="esse_cone_time">Esse ícone é time</string>
    <string name="string_esse_cone_time">ic_time</string>
    <string name="esse_cone_group">Esse ícone é group</string>
    <string name="string_esse_cone_group">ic_group</string>
    <string name="esse_cone_e_do_home_tres">ic_hometres</string>
    <string name="esse_cone_sound_dois">ic_sounddois</string>
    <string name="esse_cone_e_user">ic_user</string>
    <string name="esse_icone_e_do_hamburguer_tres">ic_hamburguertres</string>
    <string name="esse_cone_do_logo_quatro">ic_logoquatro</string>
    <string name="esse_cone_ellipse_tres">ic_ellipsetres</string>
    <string name="essa_imagem_retangulo">img_retangulo</string>
    <string name="esse_icone_group_20">ic_group20</string>
    <string name="esse_icone_e_do_play_button">ic_playbutton</string>
    <string name="essa_imagem_e_do_rectangle_23">img_rectangle23</string>
    <string name="essa_imagem_do_rectangle_25">img_rectangle25</string>
    <string name="essa_imagem_do_rectangle_26">img_rectangle26</string>
    <string name="essa_imagem_do_rectangle_28">img_rectangle28</string>
    <string name="esse_icone_e_do_sounds">ic_sounds1</string>
    <string name="esse_icone_e_do_home_quatro">ic_homequatro</string>
    <string name="esse_o_sound_tres">ic_soundtres</string>
    <string name="esse_icone_e_o_user_2">ic_user2</string>
    <string name="esse_icone_e_hamburguer_quatro">ic_hamburguerquatro</string>
    <string name="esse_cone_o_logo_cinco">ic_logocinco</string>
    <string name="esse_cone_edit">ic_edit</string>
    <string name="essa_imagem_e_profile_pic">img_profilepic</string>
    <string name="esse_icone_e_afreen_khan">ic_afreenkhan</string>
    <string name="esse_icone_e_lucknow">ic_lucknow</string>
    <string name="esse_cone_e_do_stats">ic_stats</string>
    <string name="esse_icone_e_stats_e_achievements">ic_sments</string>
    <string name="esse_icone_e_do_stats">ic_stats</string>
    <string name="esse_icone_e_title">ic_titleum</string>
    <string name="esse_icone_e_meditation">ic_meditationum</string>
    <string name="esse_icone_e_time">ic_timeum</string>
    <string name="esse_icone_e_star_now">ic_starnow</string>
    <string name="esse_icone_e_user_6">ic_user6</string>
    <string name="esse_icone_e_sounds_2">ic_iconesounds2</string>
    <string name="esse_icone_e_user_7">ic_user7</string>
    <string name="esse_icone_e_tools">ic_tools</string>
    <string name="esse_icone_e_mood_journal">ic_moodjournal</string>
    <string name="esse_icone_e_mood_booster">esse icone e mood booster</string>
    <string name="esse_icone_e_positive_notes">ic_positivenotes</string>
    <string name="esse_icone_e_trigger_plan">ic_triggerplan</string>
    <string name="esse_icone_e_goal_trainer">ic_goaltrainer</string>
    <string name="esse_icone_e_sleep">ic_sleep</string>
    <string name="esse_icone_e_sleep_time">ic_sleeptime</string>
    <string name="esse_icone_e_deep">ic_deep</string>
    <string name="esse_icone_e_quality">ic_quality</string>
    <string name="esse_icone_e_bedtime">ic_bedtime</string>
    <string name="esse_icone_e_chart">ic_chart</string>
</resources>