<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ic_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:context=".MainActivity">


            <ImageView
                android:id="@+id/ic_hamburguertres"
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="75dp"
                android:contentDescription="@string/esse_icone_e_do_hamburguer_tres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hamburger" />

            <ImageView
                android:id="@+id/ic_logoquatro"
                android:layout_width="44dp"
                android:layout_height="49dp"
                android:layout_marginStart="119dp"
                android:layout_marginTop="59dp"
                android:contentDescription="@string/esse_cone_do_logo_quatro"
                app:layout_constraintStart_toEndOf="@+id/ic_hamburguertres"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/ic_ellipsetres"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="66dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/esse_cone_ellipse_tres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_logoquatro"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_ellipse" />

            <ImageView
                android:id="@+id/ic_tools"
                android:layout_width="77dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/esse_icone_e_tools"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_hamburguertres"
                app:srcCompat="@drawable/ic_title__1_" />

            <ImageView
                android:id="@+id/ic_moodjournal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/esse_icone_e_mood_journal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_tools"
                app:srcCompat="@drawable/ic_mood_journal" />

            <ImageView
                android:id="@+id/ic_moodbooster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="110dp"
                android:contentDescription="@string/esse_icone_e_mood_booster"
                app:layout_constraintStart_toEndOf="@+id/ic_moodjournal"
                app:layout_constraintTop_toBottomOf="@+id/ic_ellipsetres"
                app:srcCompat="@drawable/ic_mood_booster" />

            <ImageView
                android:id="@+id/ic_positivenotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/esse_icone_e_positive_notes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_moodjournal"
                app:srcCompat="@drawable/ic_positive_notes" />

            <ImageView
                android:id="@+id/ic_triggerplan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/esse_icone_e_trigger_plan"
                app:layout_constraintStart_toEndOf="@+id/ic_positivenotes"
                app:layout_constraintTop_toBottomOf="@+id/ic_moodbooster"
                app:srcCompat="@drawable/ic_trigger_plan" />

            <ImageView
                android:id="@+id/ic_goaltrainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/esse_icone_e_goal_trainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_positivenotes"
                app:srcCompat="@drawable/ic_goal_trainer" />

            <ImageView
                android:id="@+id/ic_user6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="74dp"
                android:layout_marginTop="144dp"
                android:contentDescription="@string/esse_icone_e_user_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_goaltrainer"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/ic_iconesounds2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/esse_icone_e_sounds_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_user6"
                app:srcCompat="@drawable/ic_sounds" />

            <ImageView
                android:id="@+id/ic_user7"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="87dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/esse_icone_e_user_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_iconesounds2"
                app:srcCompat="@drawable/ic_profile" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>>