<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ic_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_signup"
            tools:context=".MainActivity">


            <ImageView
                android:id="@+id/ic_hamburguerquatro"
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="75dp"
                android:contentDescription="@string/esse_icone_e_hamburguer_quatro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hamburger" />

            <ImageView
                android:id="@+id/ic_logocinco"
                android:layout_width="44dp"
                android:layout_height="49dp"
                android:layout_marginStart="117dp"
                android:layout_marginTop="59dp"
                android:contentDescription="@string/esse_cone_o_logo_cinco"
                app:layout_constraintStart_toEndOf="@+id/ic_hamburguerquatro"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/ic_edit"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_marginStart="114dp"
                android:layout_marginTop="74dp"
                android:contentDescription="@string/esse_cone_edit"
                app:layout_constraintStart_toEndOf="@+id/ic_logocinco"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit" />

            <ImageView
                android:id="@+id/img_profilepic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="112dp"
                android:contentDescription="@string/essa_imagem_e_profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_logocinco"
                app:srcCompat="@drawable/img_profilepic" />

            <ImageView
                android:id="@+id/ic_afreenkhan"
                android:layout_width="182dp"
                android:layout_height="48dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="96dp"
                android:contentDescription="@string/esse_icone_e_afreen_khan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profilepic"
                app:srcCompat="@drawable/ic_afreen_khan" />

            <ImageView
                android:id="@+id/ic_lucknow"
                android:layout_width="115dp"
                android:layout_height="24dp"
                android:layout_marginStart="170dp"
                android:layout_marginEnd="121dp"
                android:contentDescription="@string/esse_icone_e_lucknow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_afreenkhan"
                app:srcCompat="@drawable/ic_lucknow__india" />

            <ImageView
                android:id="@+id/ic_sments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/esse_icone_e_stats_e_achievements"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_lucknow"
                app:srcCompat="@drawable/ic_achievements" />

            <ImageView
                android:id="@+id/ic_stats"
                android:layout_width="235dp"
                android:layout_height="271dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="55dp"
                android:contentDescription="@string/esse_icone_e_do_stats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_sments"
                app:srcCompat="@drawable/ic_stats" />

            <ImageView
                android:id="@+id/ic_homequatro"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="83dp"
                android:contentDescription="@string/esse_icone_e_do_home_quatro"
                app:layout_constraintEnd_toStartOf="@+id/ic_soundtres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_stats"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/ic_soundtres"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="83dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="86dp"
                android:contentDescription="@string/esse_o_sound_tres"
                app:layout_constraintEnd_toStartOf="@+id/ic_user2"
                app:layout_constraintStart_toEndOf="@+id/ic_homequatro"
                app:layout_constraintTop_toBottomOf="@+id/ic_stats"
                app:srcCompat="@drawable/ic_sound" />

            <ImageView
                android:id="@+id/ic_user2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="86dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="70dp"
                android:contentDescription="@string/esse_icone_e_o_user_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_soundtres"
                app:layout_constraintTop_toBottomOf="@+id/ic_stats"
                app:srcCompat="@drawable/ic_user" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>